# quipu

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  RELEASING.md  pnpm-lock.yaml
.github/workflows/: ci.yml  nightly.yml  release.yml
client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: main.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: crypto.rs  lib.rs  main.rs  signaling.rs  voice.rs
client/src/styles/: main.css
scripts/: release.ps1
signaling/: go.mod  go.sum  quipu-signaling.bat
signaling/cmd/signaling/: main.go
signaling/internal/sfu/: manager.go  room.go
signaling/internal/updater/: updater.go
~/.tauri/: quipu2.key.pub
