[package]
name    = "quipu"
version = "0.1.19"
edition = "2021"

[lib]
name       = "quipu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "quipu"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2" }
tauri-plugin-updater      = "2"
tauri-plugin-notification = "2"
tauri-plugin-store        = "2"
tauri-plugin-process      = "2"
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
tokio                     = { version = "1", features = ["full"] }
tokio-tungstenite         = "0.26"
futures-util              = { version = "0.3", default-features = false, features = ["sink", "std"] }
anyhow                    = "1"
hex                       = "0.4"
snow                      = "0.9"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
